# tkutil

./: CMakeLists.txt
.github/workflows/: env_linux.sh  env_spack.sh  install-link-ubuntu.yml  spack-install-ubuntu.yml
cmake/: common.cmake  export.cmake  version.cmake
src/: CMakeLists.txt  Makefile
src/TkUtil/: AnsiEscapeCodes.cpp  ArgumentsMap.cpp  CMakeLists.txt  DefaultLogFactory.cpp  DefaultLogOutputStream.cpp  DuplicatedStream.cpp  ErrorLog.cpp  File.cpp  FileLogOutputStream.cpp  FileRedirection.cpp  InformationLog.cpp  InternalError.cpp  LoadableFileSet.cpp  LocalNetwork.cpp  Locale.cpp  LogDispatcher.cpp  LogOutputStream.cpp  MachineData.cpp  Mutex.cpp  NetworkData.cpp  OstreamLogOutputStream.cpp  PaintAttributes.cpp  PrintCommand.cpp  Process.cpp  ProcessLog.cpp  ProcessMemory.cpp  RemoteProcess.cpp  ScriptLogOutputStream.cpp  ScriptingLog.cpp  ScriptingTools.cpp  TaggedValue.cpp  TaskProgressionLog.cpp  TemporaryFile.cpp  ThreadManager.cpp  ThreadPool.cpp  Threads.cpp  TkUtil.doxygen  UrlFifo.cpp  UserData.cpp  UtilInfos.cpp  (+2 more)
src/TkUtil/cmake/: TkUtilConfig.cmake.in  TkUtilDistribution.h.in
src/TkUtil/public/TkUtil/: AnsiEscapeCodes.h  ArgumentsMap.h  DefaultLogFactory.h  DefaultLogOutputStream.h  DuplicatedStream.h  ErrorLog.h  FileLogOutputStream.h  FileRedirection.h  InformationLog.h  LoadableFileSet.h  LocalNetwork.h  Locale.h  LogDispatcher.h  LogOutputStream.h  MachineData.h  Mutex.h  NetworkData.h  NumericConversions.h  OstreamLogOutputStream.h  PaintAttributes.h  ParallelTasksDispatcher.h  PrintCommand.h  Process.h  ProcessLog.h  ProcessMemory.h  RemoteProcess.h  ScriptLogOutputStream.h  ScriptingLog.h  ScriptingTools.h  TaggedValue.h  TaskProgressionLog.h  TemporaryFile.h  ThreadManager.h  ThreadPool.h  Threads.h  ThreeStates.h  Timer.h  UrlFifo.h  UserData.h  UtilInfos.h  (+2 more)
src/TkUtilScripting/: CMakeLists.txt  TkUtilScripting.cpp  TkUtilScripting.i
src/TkUtilScripting/cmake/: TkUtilScriptingConfig.cmake.in
src/TkutilLauncher/: CMakeLists.txt  tkutil_launcher.cpp
src/TkutilLauncher/cmake/: TkutilLauncherConfig.cmake.in
src/encoding/: CMakeLists.txt  Iso8859_1.cpp  Iso8859_1.h  UTF_8.cpp  UTF_8.h  encoding.cpp
src/socket_proxy/: CMakeLists.txt  socket_proxy.cpp
src/socket_proxy_test/: CMakeLists.txt  echo_clt.cpp  echo_srv.cpp
src/tests/: CMakeLists.txt  ansi_esc_codes.cpp  canceled_threads.cpp  conversions.cpp  date.cpp  exceptions.cpp  fileExtractor.cpp  fileinfos.cpp  fileopts.cpp  hostinfos.cpp  joinable.cpp  locale.cpp  logs.cpp  memory.cpp  modify_script.cpp  remoteProcess.cpp  removefile.cpp  script_tags.cpp  scripting_logs.cpp  thread_manager.cpp  thread_pool.cpp  timer.cpp  tmpfile.cpp  unicode.cpp  urlfifo.cpp  user_representation.cpp  userinfos.cpp  utf8.cpp  utf8chars.cpp
test_link/: CMakeLists.txt  main.cpp
